correct overflow

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     min-height: 100%;
     margin: 0;
     padding: 0;
+    overflow:hidden;
 }
 html {
     min-height: 100%;
